# Grlib

./: .pre-commit-config.yaml  README.md  __init__.py  all_experiments.py  consts.py  download_dataset.py  dsi_SAC_9x1_model.pth  dsi_SAV_9x9_model.pth  env_maker.py  env_wrappers.py  experiments.py  generate_embeddings_source_tasks.py  graml_main.py  odgr_executor.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
CI/: Dockerfile  README.md
archive_modules/: generate_embeddings_dynamic_goals.py  generate_embeddings_source_tasks.py
dataset/: gr_dataset.py
evaluation/: analyze_results_cross_alg_cross_domain.py  create_minigrid_map_image.py  generate_experiments_results.py  generate_experiments_results_new_ver1.py  generate_experiments_results_new_ver2.py  generate_task_specific_statistics_plots.py  get_plans_images.py  increasing_and_decreasing_.py
gr_lib/: __init__.py
gr_libs/: __init__.py  _version.py  all_experiments.py  odgr_executor.py
grlib/: __init__.py
metrics/: metrics.py
ml/: __init__.py  agent.py  graml_main
recognizer/: __init__.py  graml_recognizer.py  graql_recognizer.py
scripts/: create_minigrid_map_image.py  file_system.py  generate_embeddings_dynamic_goals.py  generate_embeddings_source_tasks.py  generate_embeddings_statistics.py  generate_experiments_results.py  generate_experiments_results_base_conf_mat.py  generate_statistics_plots.py  generate_task_specific_statistics_plots.py  get_plans_images.py  increasing_and_decreasing_.py
tests/: README.md  test_GCGraml.py  test_draco.py  test_gcdraco.py
tutorial/: tutorial.py
(+322 files in other folders)
