[metadata]
name = grlib
version = 0.1.0
description = Goal Recognition Benchmark & Algorithms Library
author = Matan Shamir
author_email = matan.shamir@live.biu.ac.il
license = MIT
url = https://github.com/MatanShamir1/GRAML.git
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    gymnasium
    stable-baselines3

[versioneer]
VCS = git
style = pep440
versionfile_source = grlib/_version.py
versionfile_build = grlib/_version.py
tag_prefix =
parentdir_prefix = grlib-

[options.entry_points]
console_scripts =
    grlib-run = grlib.main:main
